css: fix overflow problem

--- a/core/static/core/style.scss
+++ b/core/static/core/style.scss
@@ -253,6 +253,7 @@ h6 {
 p, pre {
   margin-top: 1em;
   margin-left: 0px;
+  overflow: auto;
 }
 
 ul, ol, dl {
